--- a/server/client/package.json
+++ b/server/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "classnames": "^2.2.6",
     "http-proxy-middleware": "^0.19.1",
     "lodash": "^4.17.11",
     "node-sass-chokidar": "^1.3.5",
@@ -10,6 +11,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
